# NEAR-Stake-Pool-Smart-Contract

./: .gitignore  Cargo.toml  README.md
source/: account_balance.rs  account_registry.rs  delayed_withdrawal.rs  delayed_withdrawn_fund.rs  fee.rs  fee_registry.rs  fund.rs  fungible_token.rs  investment_withdrawal.rs  investor_investment.rs  lib.rs  reward.rs  shared_fee.rs  stake_decreasing_kind.rs  stake_pool.rs  staking_contract_version.rs  storage_key.rs  validating.rs  validator.rs  validator_balance.rs
source/cross_contract_call/: classic_validator.rs  mod.rs
source/data_transfer_object/: account_balance.rs  aggregated.rs  base_account_balance.rs  callback_result.rs  delayed_withdrawal_details.rs  epoch_height_registry.rs  fee_registry_light.rs  full.rs  full_for_account.rs  fund.rs  fungible_token_metadata.rs  investment_account_balance.rs  investor_investment.rs  mod.rs  requested_to_withdrawal_fund.rs  storage_staking_price.rs  storage_staking_requested_coverage.rs  validator.rs
